# NectarGAN

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.json  config.py  environment.yml  index.html  mkdocs.yml  pix2pix-graphical.py  pyproject.toml  requirements.txt  setup.py  sitemap.xml  test_onnx_model.py  to_onnx.py  train.py
.github/workflows/: docker-build.yml  docs.yml  package-test.yml
api/: index.html
api/config/: index.html
api/dataset/: index.html
api/onnx_tools/: index.html
api/scheduling/: index.html
api/testers/: index.html
api/visdom/: index.html
docker/: .dockerignore  .env  Dockerfile  docker-compose.yaml  entrypoint.sh
docker/mount/: docker_nectargan_config.json  entrypoint.sh  train_config.json
docker/resources/: start.py  utils.py
docker/scripts/: config_editor.py  formatter.py  nectargan.py  renderer.py  test_model.py  train_model.py  welcome.py  wrapperutils.py
docker/visdom/: Dockerfile  start_server.sh
docs/: api.md  faq.md  getting_started.md  index.md  lossmanager.md  scripts.md  testing_your_installation.md  toolbox.md
docs/api/: config.md  dataset.md  lossmanager.md  onnx_tools.md  scheduling.md  testers.md  trainers.md  visdom.md
docs/getting_started/: cli.md  docker.md  toolbox.md  toolbox_review.md  toolbox_testing.md  toolbox_training.md
docs/toolbox/: dataset.md  experiment.md  review.md  settings.md  testing.md  training.md  utilities.md
examples/: README.md
faq/: index.html
getting_started/: index.html
getting_started/cli/: index.html
getting_started/docker/: index.html
getting_started/toolbox_review/: index.html
getting_started/toolbox_testing/: index.html
getting_started/toolbox_training/: index.html
models/: discriminator_model.py  generator_blocks.py  generator_model.py  loss.py  networks.py
nectargan/: __init__.py  constants.py
nectargan/config/: __init__.py  config_data.py  config_manager.py  default.json
nectargan/dataset/: __init__.py  augmentations.py  base_dataset.py  diffusion_dataset.py  image_text_dataset.py  latent_dataset.py  paired_dataset.py  transformer.py  unpaired_dataset.py
nectargan/losses/: __init__.py  lm_data.py  loss_manager.py  losses.py  pix2pix_objective.py
nectargan/models/: __init__.py
nectargan/onnx/: __init__.py  converter.py  tester.py
nectargan/scheduling/: __init__.py  data.py  scheduler.py  scheduler_torch.py  schedules.py
nectargan/start/: toolbox.py  torch_check.py
nectargan/testers/: __init__.py  tester.py
nectargan/toolbox/: run.py
nectargan/trainers/: __init__.py  diffusion_trainer.py  pix2pix_trainer.py  trainer.py
nectargan/utils/: __init__.py  meminfo.py  rebuild_default_config.py
nectargan/visualizer/: __init__.py
p2pg/: config.json  config.py  setup.py  train.py
p2pg/models/: generator_model.py
p2pg/utils/: dataset.py  utility.py
pix2pix_graphical/config/: config_data.py  config_manager.py  default.json
pix2pix_graphical/dataset/: paired_dataset.py  pix2pix_dataset.py  transformer.py
pix2pix_graphical/losses/: lm_data.py  lm_specs.py  loss_manager.py  losses.py  pix2pix_objective.py  scheduling.py
pix2pix_graphical/models/: generator_model.py  loss.py  patchgan_model.py  unet_blocks.py  unet_model.py
pix2pix_graphical/onnx/: converter.py  tester.py
pix2pix_graphical/scheduling/: data.py  scheduler.py  scheduler_torch.py  schedules.py
pix2pix_graphical/testers/: tester.py
pix2pix_graphical/toolbox/: run.py
pix2pix_graphical/trainers/: pix2pix_trainer.py  trainer.py
pix2pix_graphical/ui/: config_helper.py  run.py  workers.py
pix2pix_graphical/utils/: scheduler.py  utility.py
pix2pix_graphical/visualizer/: visdom_visualizer.py
scripts/: build_loss_graphs.py  combine_example_images.py  download_pix2pix_dataset.py  index.html  start.py  toolbox.py  train.py  worker.py
scripts/composer/: example_unet.json
search/: search_index.json
testing_your_installation/: index.html
tests/: conftest.py  run.py  test_imports.py  test_loss_framework.py  test_models.py  test_scheduler.py
toolbox/: index.html
ui/: base.ui
utility/: dataset.py  utils.py
utils/: dataset.py  scheduler.py  utility.py
visualizer/: visdom_visualizer.py
(+138 files in other folders)
