[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nectargan"
version = "0.1.0"
description = "A graphical GAN development environment and model assembly framework."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Zachary Bork" }]
dependencies = [
    "albumentations",
    "matplotlib",
    "numpy",
    "opencv-python",
    "visdom",
    "onnxruntime",
    "opencv-python",
    "Pillow",
    "pyqtgraph",
    "PySide6",
    "PySide6-Addons",
    "PySide6-Essentials"
]
requires-python = ">=3.11"

[tool.setuptools.package-data]
"*" = ["*.qss", "*.ui", "*.png", "*.svg", "*.gif", "*.json"]

[project.scripts]
nectargan-toolbox = "nectargan.start.toolbox:main"
nectargan-train-paired = "nectargan.start.training.paired:main"
nectargan-test-paired = "nectargan.start.testing.paried:main"
nectargan-utils-restoreconfig = "nectargan.utils.rebuild_default_config:main"