[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nectargan"
version = "0.1.0"
description = "A graphical GAN development environment and model assembly framework."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Zachary Bork" }]
dependencies = [
    "albumentations==2.0.8",
    "matplotlib==3.10.3",
    "numpy==2.3.1",
    "onnxruntime==1.21.0",
    "opencv-python==4.11.0.86",
    "visdom==0.2.4",
    "Pillow==11.2.1",
    "pyqtgraph==0.13.7",
    "PySide6==6.9.0"
]
requires-python = ">=3.12"


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.setuptools.package-data]
"*" = ["*.qss", "*.ui", "*.png", "*.svg", "*.gif", "*.json"]

[project.scripts]
nectargan-toolbox = "nectargan.start.toolbox:main"
nectargan-train-paired = "nectargan.start.training.paired:main"
nectargan-test-paired = "nectargan.start.testing.paired:main"
nectargan-utils-restoreconfig = "nectargan.utils.rebuild_default_config:main"